# ocaml-portfolio

./: .gitignore  BONSAI_RESEARCH_REPORT.md  CHANGELOG.md  CLOUDFLARE_OCAML_BUILD_RESEARCH.md  DEPLOYMENT.md  Dockerfile  GITHUB_SECRETS.md  Makefile  PORTFOLIO_BONSAI_PATTERNS_REPORT.md  README.md  dune  dune-project  dune-workspace  ocaml_portfolio.opam  package-lock.json  package.json  portfolio20240602.opam  test_router.html  wrangler.toml
.claude/agents/: ocaml-bonsai-developer.md
.github/workflows/: cloudflare.yml  cloudflare.yml.disabled  pages.yml
.serena/: project.yml
.serena/cache/typescript/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: cloudflare_workers_deployment_report.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
_build/default/lib/client_main/: main.bc.js
functions/: [[catchall]].js
lib/: dune  router.ml
lib/client/: app.ml  dune  router.ml
lib/client/components/: Router.ml  components.ml  dune  external_link.ml  layout_simple.ml  nav_link.ml  nav_link.mli  navigation_simple.ml  navigation_styles.ml
lib/client/pages/: dune  page_about.ml  page_about_simple.ml  page_contact.ml  page_contact_simple.ml  page_home.ml  page_home_simple.ml  page_me.ml  page_project_detail.ml  page_projects.ml  page_projects_simple.ml  page_resume.ml  page_words.ml  page_work.ml  pages.ml  project_styles.ml
lib/client/styles/: dune  editorial_styles.ml  styles.ml  theme_styles.ml
lib/client_main/: dune  main.ml
lib/server/: dune  router.ml
lib/shared/: Data.ml  dune  site_config.ml  types.ml
lib/theme/: dune  theme.ml
scripts/: prepare-cloudflare-pages-legacy.js  prepare-cloudflare.js  prepare-worker.js
src/: index.ts
static/: 404.html  index.html
test-reports/animated-navigation/: TEST_REPORT.md
test-reports/animation-patterns-research/: ANIMATION_RESEARCH_REPORT.md  IMPLEMENTATION_EXAMPLES.ml  IMPLEMENTATION_GUIDE.md  TEST_REPORT.md
test-reports/bonsai-examples-deep-dive/: COMPREHENSIVE_RESEARCH_REPORT.md
test-reports/bonsai-migration/: FINAL-TEST-REPORT.md  TEST-REPORT.md
test-reports/bonsai-ui-components-deep-dive/: COMPREHENSIVE_UI_COMPONENTS_REPORT.md  TEST_REPORT.md
test-reports/bonsai-web-components-investigation/: INVESTIGATION_REPORT.md
test-reports/critical-performance-fixes/: TEST_REPORT.md
test-reports/form-handling-research/: FORM_RESEARCH_REPORT.md  IMPLEMENTATION_GUIDE.md  TEST_REPORT.md
test-reports/home-page-hero/: TEST_REPORT.md
test-reports/nav-link-implementation/: TEST_REPORT.md
test-reports/navigation/: TEST_REPORT.md
test-reports/performance-optimization/: IMPLEMENTATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  TEST_REPORT.md
test-reports/portfolio-patterns-research/: TEST_REPORT.md
test-reports/production-patterns-analysis/: COMMON_SOLUTIONS.md  FEATURE_IMPLEMENTATIONS.md  PRODUCTION_PATTERNS_REPORT.md  QUALITY_STANDARDS.md  SUMMARY.md
test-reports/project-gallery-implementation/: TEST_REPORT.md
test-reports/router-cleanup/: TEST_REPORT.md
test-reports/routing/: TEST_REPORT.md
test-reports/routing-navigation-research/: IMPLEMENTATION_EXAMPLES.ml  IMPLEMENTATION_GUIDE.md  NAVIGATION_STYLES.ml  RESEARCH_SUMMARY.md  ROUTING_RESEARCH_REPORT.md
test-reports/routing-uri-parsing/: TEST_REPORT.md
test-reports/state-routing/: TEST_REPORT.md
test-reports/testing-strategy/: COMPREHENSIVE_TESTING_STRATEGY.md  IMPLEMENTATION_EXAMPLES.md  QUICK_START_GUIDE.md  TEST_REPORT.md
workers/: index.js
