(library
 (public_name portfolio20240602.client)
 (name client)
 (modules 
   app)
 (libraries 
   shared
   pages
   components
   styles
   theme
   bonsai
   bonsai.web
   bonsai.web_ui_url_var
   bonsai.uri_parsing
   virtual_dom
   js_of_ocaml)
 (preprocess (pps ppx_jane js_of_ocaml-ppx bonsai.ppx_bonsai)))