(library
 (public_name portfolio20240602.client.components)
 (name components)
 (modules
   components
   layout_simple
   nav_link
   navigation_simple
   router)
 (libraries 
   core
   shared
   bonsai
   bonsai.web
   virtual_dom
   js_of_ocaml)
 (preprocess (pps ppx_jane js_of_ocaml-ppx bonsai.ppx_bonsai)))