(library
 (public_name portfolio20240602.client.pages)
 (name pages)
 (modules
  pages
  page_about
  page_home
  page_projects
  project_styles
  page_resume)
 (libraries
  shared
  components
  bonsai
  bonsai.web
  bonsai.web_ui_form
  bonsai.web_ui_accordion
  virtual_dom
  js_of_ocaml
  core)
 (preprocess
  (pps ppx_jane js_of_ocaml-ppx bonsai.ppx_bonsai ppx_css)))
