(library
 (public_name ocaml_portfolio.client.pages)
 (name pages)
 (modules
  pages
  page_about
  page_home
  page_work
  page_projects
  page_project_detail
  page_resume)
 (libraries
  shared
  components
  bonsai
  bonsai.web
  virtual_dom
  js_of_ocaml
  core)
 (preprocess
  (pps ppx_jane js_of_ocaml-ppx bonsai.ppx_bonsai ppx_css)))
